<resources>
    <string name="app_name">COVID19 widget</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_main">Covid19 Widget</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="total_confirm">Total Confirm</string>
    <string name="desclaimer">In StateWise Widget .You need to manually refresh it by click on button which placed at top right corner.</string>
    <string name="desclaimer_guide">Go to Launcher widget section and select it.</string>
    <string name="statewise_covid19">STATEWISE COVID19</string>
    <string name="recovered">Recovered</string>
    <string name="active">Active</string>
    <string name="covid19_india">COVID19 INDIA</string>
    <string name="last_updated">LAST UPDATED</string>
    <string name="confirmed">CONFIRMED</string>
    <string name="active_cap">ACTIVE</string>
    <string name="recovered_cap">RECOVERED</string>
    <string name="deceased_cap">DECEASED</string>
</resources>
